--- a/mystyle.css
+++ b/mystyle.css
@@ -12,7 +12,7 @@ h1 {
     font-style: normal;
     font-weight: 400;
     font-size: 64px;
-
+line-height: 64px;
 
 }
 
@@ -21,8 +21,7 @@ h2 {
     font-style: normal;
     font-weight: 400;
     font-size: 48px;
- 
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .margin-left {
@@ -67,11 +66,13 @@ p {
 .topnav a {color: white;}
 
 #heroSection {
-    background: #D9A465;
+    /* background: #D9A465; */
     /* border: 3px solid; */
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100%;
+    height: 680px;
     z-index: 3;
 }
 
@@ -80,26 +81,25 @@ p {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 50%;
+    width: 75%;
     height: 500px;
     left: 0px;
-    
     z-index: 2;
-
 }
 
 .hero-text {
     display: flex;
     flex-direction: column;
+    width: 40%;
 }
 
 .hero-image {
     display: inline-block;
-    width: 300px;
-    height: 300px;
+    width: 500px;
+    height: 550px;
     background: black;
-    border-radius: 300px;
-    margin: 20px;
+    border-radius: 20px;
+    margin: 50px;
 }
 
 .sidebarSection {
@@ -123,19 +123,18 @@ html {
     align-items: center;
     /* border: 2px solid; */
     border-color: brown;
-    padding: 30px;
+    padding: 40px;
 }
 
 
 #mySkills {
     text-align: center;
     color: white;
-    background-color: #7A9FFF;
-    padding: 15px 5% 15px 5%;
+    background-color: #3c73fd;
+    padding: 100px 5% 100px 5%;
     display: flex;
     flex-direction: column;
     /* /border: solid 3px; */
-
     border-color: blueviolet;
 }
 
@@ -143,17 +142,21 @@ html {
     padding: 10px 10px 10px 10px;
     justify-content: center;
     height: 75%;
-    width: 75%;
+    border-radius: 10px;
+
     /* border: solid 3px; */
     /* border-color: aquamarine; */
 
 }
 
+.skillImg img {width: 200px;
+height: 200px;}
+
 #myWork {
 
-    padding: 15px 5% 15px 5%;
+    padding: 100px 5% 100px 5%;
     text-align: center;
-    background-color: #9ACFFF;
+    background-color: #3c73fd;
     /* border: solid 3px; */
     /* border-color: aquamarine; */
 }
@@ -183,12 +186,12 @@ html {
 }
 
 #aboutMe {
-    background: #CEFFC7;
+    /* background: #CEFFC7; */
     /* border: 3px solid; */
     padding: 5%;
 }
 
-.aboutMe H1 {
+#aboutMe H1 {
     text-align: center;
 }
 
